[package]
name = "name_cp"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.3", features = ["derive"] }
inquire = "0.7"
flexi_logger = { version = "0.29", features = ["colors"] }
lexical-sort = "0.3"
log = { version = "0.4", features = ["std", "serde"] }
paris = "1.5"
strsim = "0.11"

[profile.release]
opt-level = 3
strip = true
lto = true
